# Steganography_Website

./: .gitignore  Audio.css  Audio.html  Image.css  Image.html  README.md  Text.css  Text.html  Untitled-3.html  Video.css  Video.html  about.html  app.py  apphosting.yaml  audio-page.html  audio.py  ertretrett  home-page.html  home.html  image-page.html  index.css  index.html  ksdjljflsdff  next.config.ts  nicepage.css  package-lock.json  package.json  pyproject.toml  req.txt  rtrttrtrtrt  steganography-image.css  steganography-image.html  steganography-image.py  test.txt  text-page.html  text.py  video-page.html  video.py
.idx/: dev.nix
Steganography_Website/: manage.py
Steganography_Website/Steganography_Website/: asgi.py  settings.py  urls.py  views.py  wsgi.py
Steganography_Website/static/: Image.css  Text.css  Video.css  nicepage.css
Steganography_Website/templates/: Audio.html  Image.html  Text.html  Video.html  index.html
docs/: blueprint.md
src/ai/: dev.ts
src/app/: globals.css  layout.tsx  page.tsx
src/backend/: apitest.py  audio_steganography.py  main.py  requirements.txt  text_steganography.py  video_steganography.py
src/components/: audio-decode-panel.tsx  audio-encode-panel.tsx  decode-panel.tsx  encode-panel.tsx  footer.tsx  header.tsx  text-decode-panel.tsx  text-encode-panel.tsx  video-decode-panel.tsx  video-encode-panel.tsx
src/lib/: steganography.ts
static/: steganography-image.css
styles/: about.css  audio-page.css  home-page.css  image-page.css  text-page.css  video-page.css
templates/: home.html  steganography-image.html
(+13 files in other folders)
