[project]
name = "studio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask-cors>=6.0.1",
    "flask>=3.0.0",
    "gunicorn>=22.0.0",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=10.0.0",
    "pycryptodome>=3.23.0",
    "requests>=2.32.4",
    "scipy>=1.16.0",
    "stegano>=0.11.0",
    "werkzeug>=3.1.3",
]
